Update doc.md