@@ -1,522 +1,198 @@
 # Hotel Management System Using JavaFX
-## Final Year Project Documentation
+
+> **Final Year Project Report**
 
 ---
 
-## Table of Contents
-
-1. **Introduction**
-2. **Project Overview**
-3. **System Requirements**
-4. **Technical Architecture**
-5. **Database Design**
-6. **User Interface Design**
-7. **System Features**
-8. **Implementation Details**
-9. **Testing and Screenshots**
-10. **Deployment Guide**
-11. **Future Enhancements**
-12. **Conclusion**
-13. **References**
-
----
-
-## 1. Introduction
-
+## Preface
+This document explains our Hotel Management System built with JavaFX. It is written in **simple, non-technical language** so anyone can understand how the program works.  
 The Hotel Management System is a comprehensive desktop application developed using JavaFX technology to streamline hotel operations and enhance guest experience. This system provides a centralized platform for managing various hotel activities including room bookings, customer information, staff management, and financial tracking.
 
 In today's competitive hospitality industry, efficient management systems are crucial for successful hotel operations. Traditional manual processes are time-consuming, error-prone, and difficult to scale. This project addresses these challenges by providing an automated, user-friendly solution that improves operational efficiency and customer satisfaction.
 
-### 1.1 Problem Statement
+---
 
-Hotels face numerous challenges in managing their daily operations:
-- Manual record-keeping leading to errors and inefficiencies
-- Difficulty in tracking room availability and bookings
-- Complex customer information management
-- Lack of real-time reporting and analytics
-- Poor coordination between different user roles (customers, managers, administrators)
-
-### 1.2 Project Objectives
-
-The primary objectives of this Hotel Management System are:
-- Develop a user-friendly desktop application for hotel management
-- Implement role-based access control for different user types
-- Provide real-time room booking and availability tracking
-- Generate comprehensive reports for business analytics
-- Ensure secure data management with MySQL database integration
-- Create an intuitive interface using modern JavaFX components
+## Table of Contents
+1. Problem Statement  
+2. Project Goals  
+3. How the Program Is Organised  
+4. Database Design (with picture)  
+5. Main Screens (with screenshots)  
+6. What Each User Can Do  
+7. How We Built and Tested It  
+8. How To Run It  
+9. Future Ideas  
+10. Conclusion
 
 ---
 
-## 2. Project Overview
+## 1. Problem Statement
+Managing a hotel means juggling many small jobs every day – taking new room bookings, checking guests in and out, keeping track of empty rooms, writing bills, paying staff and seeing how much money the hotel earns.  
+When all these jobs are done on paper or by talking on the phone, mistakes are common:
+* Two guests may get the same room by accident.  
+* Staff may forget who has already paid.  
+* Managers cannot see earnings quickly.  
+* Old paper files take space and are hard to search.
 
-The Hotel Management System is built using JavaFX, a modern toolkit for building rich desktop applications in Java. The system follows the Model-View-Controller (MVC) architectural pattern and integrates with MySQL database for data persistence.
+The bigger the hotel becomes, the harder it is to keep every note and bill in order.  
+So we need a simple computer program that keeps all details safe in one place and shows them clearly on screen.
 
-### 2.1 Key Features
-
-- **Multi-User Support**: Separate interfaces for Customers, Managers, and Administrators
-- **Room Management**: Real-time room availability, booking, and check-in/check-out processes
-- **Customer Management**: Comprehensive customer profiles and booking history
-- **Employee Management**: Staff information and role management
-- **Financial Tracking**: Earnings reports and billing management
-- **Secure Authentication**: Role-based login system with encrypted passwords
-
-### 2.2 Technology Stack
-
-- **Programming Language**: Java 21
-- **GUI Framework**: JavaFX 21.0.2
-- **Database**: MySQL 8.0
-- **Build Tool**: Apache Maven
-- **IDE**: IntelliJ IDEA
-- **UI Components**: JFoenix 9.0.10, FontAwesome 4.7.0
-- **Additional Libraries**: iTextPDF 5.3.4, MySQL Connector/J 8.0.26
-
-### 2.3 Development Environment
-
-- **Java Version**: Java 21 (LTS)
-- **JavaFX SDK**: 21.0.2
-- **Maven**: 3.8+
-- **MySQL**: 8.0+
-- **Operating System**: Windows, Linux, macOS compatible
+### Why our project helps
+* Cuts down paper work – everything lives in the computer.  
+* Reduces double-booking because the program blocks rooms that are already booked.  
+* Gives quick totals of earnings at any time.  
+* Separates access: customers, managers and admin each have their own login, so private data stays safe.
 
 ---
 
-## 3. System Requirements
-
-### 3.1 Hardware Requirements
-
-**Minimum Requirements:**
-- Processor: Intel Core i3 or AMD equivalent
-- RAM: 4 GB
-- Storage: 1 GB available space
-- Display: 1024x768 resolution
-- Network: Internet connection for database connectivity
-
-**Recommended Requirements:**
-- Processor: Intel Core i5 or AMD Ryzen 5
-- RAM: 8 GB or more
-- Storage: 2 GB available space
-- Display: 1920x1080 resolution or higher
-- Network: Stable broadband connection
-
-### 3.2 Software Requirements
-
-- Java Runtime Environment (JRE) 21 or higher
-- MySQL Server 8.0 or compatible
-- JavaFX Runtime (included with OpenJDK or available separately)
-- Compatible operating system (Windows 10+, macOS 10.14+, Ubuntu 18.04+)
-
-### 3.3 Database Requirements
-
-- MySQL Server 8.0+
-- Database name: `mydatabase`
-- Default port: 3306
-- User credentials as configured in DBConnection.java
+## 2. Project Goals
+1. **Easy booking:** Guests can see free rooms and reserve in a few clicks.  
+2. **Clear roles:** Customer, Manager and Admin screens look different and show only the tools each role needs.  
+3. **Live room list:** Staff always know which rooms are free, booked, occupied or need cleaning.  
+4. **One database:** All data sits inside a MySQL database so nothing is lost if the computer restarts.  
+5. **Simple look:** Use neat buttons, icons and colours so new staff learn fast.  
+6. **Quick reports:** Managers and admin can print earnings and guest lists.  
+7. **Runs on Windows, Linux or Mac** with Java 21 and JavaFX 21.
 
 ---
 
-## 4. Technical Architecture
-
-The Hotel Management System follows a layered architecture pattern that promotes separation of concerns and maintainability.
-
-### 4.1 System Architecture
-
-The application is structured into the following layers:
-
-1. **Presentation Layer (UI)**
-   - JavaFX FXML files for user interfaces
-   - CSS stylesheets for visual design
-   - Controller classes for handling user interactions
-
-2. **Business Logic Layer**
-   - Service classes for business operations
-   - Validation logic and business rules
-   - Data processing and transformation
-
-3. **Data Access Layer**
-   - Database connection management
-   - CRUD operations
-   - SQL queries and stored procedures
-
-4. **Database Layer**
-   - MySQL database server
-   - Table structures and relationships
-   - Data integrity constraints
-
-### 4.2 Package Structure
-
+## 3. How the Program Is Organised
+Our folder names tell the story:
 ```
-sample/
-├── _BackEnd/
-│   ├── TableView/          # Table model classes
-│   ├── CommonTask.java     # Utility methods
-│   ├── DBConnection.java   # Database connectivity
-│   └── dialogPane.css      # Dialog styling
-├── customer/
-│   ├── Login/              # Customer authentication
-│   └── CustomerPages/      # Customer functionality
-├── manager/
-│   ├── Login/              # Manager authentication
-│   └── ManagerPages/       # Manager functionality
-├── zadmin/
-│   ├── Login/              # Admin authentication
-│   └── AdminPages/         # Admin functionality
-├── images/                 # Application resources
-├── Controller.java         # Main controller
-├── Main.java              # Application entry point
-└── sample.fxml            # Main UI layout
+Hotel-Management-System-JavaFx/
+ ├─ customer/  ← screens for guests
+ ├─ manager/   ← screens for front-desk staff
+ ├─ zadmin/    ← screens for admin
+ ├─ _BackEnd/  ← helpers: DB link, table models
+ ├─ screenshots/ ← pictures used in this report
+ ├─ Main.java   ← starts the program
+ └─ pom.xml     ← build file
 ```
-
-### 4.3 Design Patterns Used
-
-- **Model-View-Controller (MVC)**: Separates UI from business logic
-- **Singleton**: Database connection management
-- **Factory**: Dialog and alert creation
-- **Observer**: Event handling in JavaFX components
+`Main.java` shows the first window where the user picks their role.  Then `CommonTask.pageNavigation()` opens the right FXML file.
 
 ---
 
-## 5. Database Design
-
-The system uses a relational database design with MySQL to ensure data integrity and efficient querying.
-
-[42]
-
-### 5.1 Database Schema
-
-The database consists of several interconnected tables:
-
-**Core Tables:**
-- `users` - User authentication and profile information
-- `customers` - Customer-specific details
-- `employees` - Staff information and roles
-- `rooms` - Room inventory and specifications
-- `bookings` - Reservation records
-- `payments` - Financial transactions
-- `check_ins` - Check-in records
-- `check_outs` - Check-out records
-
-### 5.2 Entity Relationships
-
-**Key Relationships:**
-- One-to-Many: Customer → Bookings
-- One-to-Many: Room → Bookings
-- One-to-One: Booking → Payment
-- Many-to-One: Bookings → Employee (Manager)
-
-### 5.3 Database Configuration
-
-The database connection is managed through the `DBConnection.java` class:
-
-```java
-public class DBConnection {
-    public static final String DB_NAME = "mydatabase";
-    public static final String USERNAME = "myuser";
-    public static final String PASSWORD = "myuserpassword";
-    
-    public static Connection getConnections() {
-        // Database connection implementation
+## 4. Database Design
+Below is our database picture drawn with Mermaid. Boxes are tables, arrows show links.
+```mermaid
+erDiagram
+    USERS ||--o{ BOOKINGS : makes
+    USERS {
+        int user_id PK
+        string name
+        string role  "customer/manager/admin"
+        string password
     }
-}
-```
-
----
-
-## 6. User Interface Design
-
-The application features a modern, intuitive interface designed using JavaFX and enhanced with JFoenix components.
-
-### 6.1 Main Application Window
-
-[44]
-
-The main window serves as the entry point to the system, providing access to three distinct user roles:
-- Customer Login
-- Manager Login  
-- Administrator Login
-
-### 6.2 Design Principles
-
-**User Experience (UX) Principles:**
-- Consistent navigation patterns
-- Intuitive iconography and visual cues
-- Responsive layout design
-- Clear visual hierarchy
-- Accessible color schemes
-
-**Visual Design Elements:**
-- Modern flat design aesthetic
-- Consistent color palette
-- Professional typography
-- Smooth animations and transitions
-- Contextual feedback and notifications
-
-### 6.3 UI Components
-
-**Primary Components:**
-- JFoenix buttons and controls
-- FontAwesome icons for enhanced visual appeal
-- Custom CSS styling for branding
-- Responsive layouts using JavaFX layouts
-- Modal dialogs for user interactions
-
-### 6.4 Responsive Design
-
-The interface adapts to different screen sizes and resolutions while maintaining usability across various devices and display configurations.
-
----
-
-## 7. System Features
-
-### 7.1 Customer Module
-
-The customer module provides comprehensive booking and account management capabilities.
-
-**Customer Authentication:**
-[43]
-
-**Key Features:**
-- User registration and profile management
-- Room search and availability checking
-- Online booking and reservation management
-- Booking history and status tracking
-- Check-in and check-out processes
-- Payment processing and receipts
-
-**Customer Dashboard:**
-- Personal information management
-- Active bookings overview
-- Booking history
-- Room preferences
-- Account settings
-
-### 7.2 Manager Module
-
-Managers have access to operational management tools for day-to-day hotel operations.
-
-**Manager Interface:**
-[45]
-
-**Core Functionalities:**
-- Room inventory management
-- Customer check-in/check-out processing
-- Booking modifications and cancellations
-- Staff scheduling and task assignment
-- Operational reports generation
-- Customer service management
-
-**Room Management:**
-- Real-time room status updates
-- Housekeeping coordination
-- Maintenance scheduling
-- Room rate management
-
-### 7.3 Administrator Module
-
-Administrators have full system access for comprehensive hotel management.
-
-**Admin Dashboard:**
-The administrator interface provides complete system oversight including:
-
-**Employee Management:**
-- Staff recruitment and onboarding
-- Employee profile management
-- Role and permission assignment
-- Performance tracking
-- Payroll management
-
-**Financial Management:**
-- Revenue tracking and analysis
-- Financial report generation
-- Pricing strategy management
-- Profit/loss analysis
-- Budget planning tools
-
-**System Administration:**
-- User account management
-- System configuration
-- Database maintenance
-- Security settings
-- Backup and recovery
-
----
-
-## 8. Implementation Details
-
-### 8.1 Main Application Class
-
-```java
-public class Main extends Application {
-    public static Stage stage;
-    public static double x, y;
-    public static double xxx, yyy;
-    
-    @Override
-    public void start(Stage primaryStage) throws Exception {
-        stage = primaryStage;
-        Parent root = FXMLLoader.load(getClass().getResource("sample.fxml"));
-        primaryStage.initStyle(StageStyle.UNDECORATED);
-        primaryStage.setTitle("Hotel Management System");
-        primaryStage.setScene(new Scene(root, 600, 400));
-        primaryStage.show();
+    ROOMS ||--o{ BOOKINGS : reserved_by
+    ROOMS {
+        int room_id PK
+        string type  "single/double"
+        double price
+        string status "free/booked/occupied"
     }
-    
-    public static void main(String[] args) {
-        launch(args);
+    BOOKINGS }o--|| PAYMENTS : paid_with
+    BOOKINGS {
+        int booking_id PK
+        int user_id FK
+        int room_id FK
+        date check_in
+        date check_out
+        string status
     }
-}
-```
-
-### 8.2 Database Connection Management
-
-The application uses a singleton pattern for database connectivity:
-
-```java
-public class DBConnection {
-    private static Connection connection = null;
-    
-    public static Connection getConnections() {
-        try {
-            Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
-            connection = DriverManager.getConnection(
-                "jdbc:mysql://localhost:3306/" + DB_NAME, 
-                USERNAME, PASSWORD);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return connection;
+    PAYMENTS {
+        int pay_id PK
+        int booking_id FK
+        double amount
+        date pay_date
     }
-}
+    EMPLOYEES {
+        int emp_id PK
+        string name
+        string post
+        double salary
+    }
 ```
-
-### 8.3 Navigation System
-
-The `CommonTask` class provides centralized navigation management:
-
-```java
-public static void pageNavigation(String to, Stage stage, Class<?> classes, 
-                                String title, int width, int height) {
-    // Navigation implementation with smooth transitions
-}
-```
-
-### 8.4 Table View Implementation
-
-Custom table view classes handle data presentation:
-- `AdminCustomerTable.java` - Customer data management
-- `AdminEmployeeTable.java` - Employee information
-- `CustomerRoomTable.java` - Room availability display
-- `ManagerCheckInDetailsTable.java` - Check-in records
-
-### 8.5 Error Handling and Validation
-
-The system implements comprehensive error handling:
-- Input validation for all user forms
-- Database connection error recovery
-- User-friendly error messages
-- Exception logging and monitoring
+*One user can make many bookings. Each booking belongs to one room and one payment.*
 
 ---
 
-## 9. Testing and Screenshots
+## 5. Main Screens
+Below we add real pictures from the `screenshots` folder of the GitHub repo.
 
-### 9.1 User Interface Screenshots
+### 5.1 Home Screen
+![Main Window](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Main.PNG)
+*The first screen lets the user choose Customer, Manager or Admin.*
 
-**Main Application Window:**
-The primary interface provides access to all user roles with an elegant, professional design.
+### 5.2 Customer Login
+![Customer Login](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Customer0.PNG)
 
-**Customer Interface:**
-Clean and intuitive design focusing on ease of use for hotel guests.
+### 5.3 Customer Dashboard
+![Customer Home](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Customer1.PNG)
 
-**Manager Dashboard:**
-Comprehensive tools for hotel operations management with real-time data display.
+### 5.4 Manager Dashboard
+![Manager Home](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Manager0.PNG)
 
-**Administrator Panel:**
-Full system control with advanced management capabilities and detailed analytics.
+### 5.5 Admin Dashboard
+![Admin Home](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Admin0.PNG)
 
-### 9.2 Testing Approach
-
-**Testing Methodologies:**
-- Unit testing for individual components
-- Integration testing for database operations  
-- User acceptance testing with sample data
-- Performance testing under various load conditions
-- Security testing for authentication and authorization
-
-**Test Scenarios:**
-- User registration and login processes
-- Room booking and cancellation workflows
-- Payment processing and receipt generation
-- Report generation and data export
-- Multi-user concurrent access testing
-
-### 9.3 Quality Assurance
-
-**Code Quality Measures:**
-- Code review processes
-- Consistent coding standards
-- Documentation and comments
-- Error handling best practices
-- Performance optimization
+(Extra screenshots for bookings, earnings and room lists are included in Appendix.)
 
 ---
 
-## 10. Deployment Guide
+## 6. What Each User Can Do
+### 6.1 Customer
+* Create new account or login.
+* See free rooms with price.
+* Book a room, view past bookings.
+* Check-in online and check-out.
 
-### 10.1 System Setup
+### 6.2 Manager
+* Approve or reject new bookings.
+* Mark rooms as occupied, cleaned, or under repair.
+* Handle customer check-in/check-out.
+* View customer list.
 
-**Database Setup:**
-1. Install MySQL Server 8.0+
-2. Create database named 'mydatabase'
-3. Import the provided SQL schema
-4. Configure user credentials in DBConnection.java
+### 6.3 Admin
+* Add or remove employees.
+* View daily, monthly earnings.
+* See all customers and bookings.
+* Change room prices.
 
-**Application Deployment:**
-1. Ensure Java 21 runtime is installed
-2. Download JavaFX SDK 21.0.2
-3. Configure JavaFX module path
-4. Execute the application JAR file
+---
 
-**Command Line Execution:**
+## 7. How We Built and Tested It
+We used IntelliJ IDEA. Every screen was first drawn in Scene Builder, then linked to a controller class. After coding we ran unit tests on booking logic and tried fake bookings to be sure double-booking never happens.
+
+**Simple Steps Followed:**
+1. Plan the tables on paper.
+2. Create MySQL database.
+3. Build login screens.
+4. Add booking feature.
+5. Add admin tools.
+6. Test all buttons.
+7. Fix errors found.
+
+---
+
+## 8. How To Run The Program
 ```bash
-java --module-path "path/to/javafx-sdk/lib" \
+# 1. Start MySQL and create database 'mydatabase'
+# 2. Edit DBConnection.java if your user/pw differ
+# 3. Build jar using Maven
+mvn clean package
+# 4. Run jar (example on Windows)
+java --module-path "C:\javafx-sdk-21\lib" \
      --add-modules javafx.controls,javafx.fxml,javafx.graphics \
-     --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
-     --add-opens java.base/java.lang=ALL-UNNAMED \
-     -jar Hotel-Management-System-JavaFx-1.0-SNAPSHOT.jar
+     -jar target/Hotel-Management-System-JavaFx-1.0-SNAPSHOT.jar
 ```
-
-### 10.2 Configuration Management
-
-**Database Configuration:**
-- Modify `DBConnection.java` for custom database settings
-- Update connection parameters as needed
-- Configure connection pooling for production use
-
-**Application Properties:**
-- Customize UI themes through CSS files
-- Configure default user roles and permissions
-- Set application-specific constants
-
-### 10.3 Production Considerations
-
-**Security Measures:**
-- Implement SSL/TLS for database connections
-- Use encrypted password storage
-- Regular security updates and patches
-- Access logging and monitoring
-
-**Performance Optimization:**
-- Database indexing for frequently queried tables
-- Connection pooling for improved performance
-- Caching mechanisms for static data
-- Regular database maintenance
 
 ---
 
-## 11. Future Enhancements
-
-### 11.1 Proposed Features
+## 9. Future Ideas
+* Mobile app so guests can book from phones.
+* Email alerts for upcoming stay.
+* Support for many hotels under one admin.
+* Add QR code keys for room doors.
 
 **Mobile Integration:**
 - Responsive web interface
@@ -536,7 +212,7 @@ java --module-path "path/to/javafx-sdk/lib" \
 - Email and SMS notification services
 - Accounting software integration
 
-### 11.2 Technology Upgrades
+## 10 Technology Upgrades
 
 **Modern Framework Migration:**
 - JavaFX to web-based technologies
@@ -549,19 +225,10 @@ java --module-path "path/to/javafx-sdk/lib" \
 - Role-based access control enhancements
 - Data encryption at rest and in transit
 - Audit trail implementation
-
-### 11.3 Scalability Improvements
-
-**System Architecture:**
-- Load balancing for high availability
-- Database sharding for large-scale operations
-- Caching layers for improved performance
-- Horizontal scaling capabilities
-
 ---
 
-## 12. Conclusion
-
+## 11. Conclusion
+Our system replaces the paper diary with an easy screen. Bookings are safe, earnings are clear and staff only see what they need. This saves time and avoids mistakes, making guests happier and the hotel more organised.
 The Hotel Management System represents a comprehensive solution for modern hotel operations, successfully addressing the key challenges faced by the hospitality industry. Through the implementation of JavaFX technology and MySQL database integration, the system provides:
 
 **Key Achievements:**
@@ -594,33 +261,13 @@ This project provided valuable experience in:
 - User interface design and usability
 - Software testing and quality assurance
 - Project management and documentation
-
-The Hotel Management System stands as a testament to the effective application of modern software development technologies in solving real-world business challenges.
-
 ---
 
-## 13. References
+## Appendix – Extra Screenshots
+*(include remaining PNG files to reach 30+ pages when printed)*
+![More](https://raw.githubusercontent.com/shireeshshelke/test-hotel-project/main/Hotel-Management-System-JavaFx/screenshots/Capture.PNG)
+- Clear visual hierarchy
+- Accessible color schemes
 
-1. Oracle Corporation. (2024). *JavaFX Documentation*. Retrieved from https://openjfx.io/
-2. Oracle Corporation. (2024). *MySQL 8.0 Reference Manual*. Retrieved from https://dev.mysql.com/doc/
-3. Apache Software Foundation. (2024). *Apache Maven Documentation*. Retrieved from https://maven.apache.org/
-4. JFoenix Team. (2024). *JFoenix Material Design Library*. Retrieved from http://www.jfoenix.com/
-5. Jensd. (2024). *FontAwesome JavaFX Integration*. Retrieved from https://github.com/Jerady/fontawesomefx
-6. iText Software. (2024). *iText PDF Library Documentation*. Retrieved from https://itextpdf.com/
-7. Fowler, M. (2002). *Patterns of Enterprise Application Architecture*. Addison-Wesley Professional.
-8. Bloch, J. (2018). *Effective Java (3rd Edition)*. Addison-Wesley Professional.
-9. Freeman, E., Robson, E., Bates, B., & Sierra, K. (2004). *Head First Design Patterns*. O'Reilly Media.
-10. Silberschatz, A., Galvin, P. B., & Gagne, G. (2018). *Operating System Concepts (10th Edition)*. John Wiley & Sons.
-
----
-
-**Project Information:**
-- **Project Title**: Hotel Management System Using JavaFX
-- **Technology Stack**: Java 21, JavaFX 21.0.2, MySQL 8.0
-- **Development Period**: Academic Year 2024-2025
-- **Repository**: https://github.com/shireeshshelke/test-hotel-project
-- **License**: MIT License
-
----
 
 *This document represents the comprehensive final year project documentation for the Hotel Management System developed using JavaFX technology. The system demonstrates modern software engineering practices and provides a complete solution for hotel management operations.*
